2008-10-15  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* include/functions_db.php: Fix where the attachment wouldn't be
	deleted because of a variable problem

	* operation/snmpconsole/snmp_alert.php: Rewrite. Fixes bug #2166256

2008-10-15  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Enterprise hook functions upgrade.

2008-10-15  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php: Removed SNMP
	  version 3 support (was not complete). 

2008-10-14  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: Fixed a bug that wouldn't render specific
	stats from data overview

2008-10-14  Sancho Lerena <slerena@artica.es>

	* include/config_process.php, index.php: Updated version.

	* include/functions_db.php: Small fix in a foreach() warning.

	* operation/agentes/estadisticas.php: Old, unused code removed.

2008-10-14  Evi Vanoost  <vanooste@rcbi.rochester.edu>
	
	* include/functions_db.php: Style changes and language updates and a
	fully functional delete_agent function

	* include/functions.php: Comment update for safe_input

	* manage_config.php: Merged Sancho's bug fixes and a rewrite. It works
	it is more elegant and is more extensive in database cleanup

2008-10-14  Sancho Lerena <slerena@artica.es>

	* operation/snmpconsole/snmp_alert.php: Texst changes for 
	SNMP trap alert value label.

	* include/pdf: Removed unused old code (ezPdf library).

2008-10-14  Esteban Sanchez  <estebans@artica.es>

	* include/config_process.php: Added ENTERPRISE_DIR constant.

2008-10-14  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php,
	operation/reporting/custom_reporting.php: Fixed checking of private
	reports.

	* operation/reporting/custom_reporting.php: Do not show reports that
	user can not see.

2008-10-13  Sancho Lerena  <slerena@artica.es>
	
	* agent_disk_conf_editor.php: Now load enterprise code
	using a normalized code.
